--- a/inventory/intended/configs/DC-BORDER2.cfg
+++ b/inventory/intended/configs/DC-BORDER2.cfg
@@ -123,6 +123,17 @@ interface Ethernet50/1
    no switchport
    ip address 10.0.1.255/31
 !
+interface Ethernet51/1
+   no shutdown
+   no switchport
+!
+interface Ethernet51/1.110
+   description L3 Uplink to WAN for Tenant_10_OP_Zone VRF
+   no shutdown
+   encapsulation dot1q vlan 110
+   vrf Tenant_10_OP_Zone
+   ip address 192.168.110.2/31
+!
 interface Ethernet55/1
    description MLAG_PEER_DC-BORDER1_Ethernet55/1
    no shutdown
@@ -264,6 +275,7 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route vrf management 0.0.0.0/0 10.99.99.1
+ip route vrf Tenant_10_OP_Zone 0.0.0.0/0 Ethernet51/1.110 192.168.110.3 name DEFAULT_TO_WAN
 !
 arp aging timeout default 900
 !
@@ -346,6 +358,7 @@ router bgp 65199
       router-id 10.255.254.128
       neighbor 10.1.1.252 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf Tenant_10_WEB_Zone
       rd 10.255.254.128:11
