--- a/inventory/intended/configs/DC-LEAF3.cfg
+++ b/inventory/intended/configs/DC-LEAF3.cfg
@@ -397,6 +397,7 @@ router bgp 65102
       router-id 10.255.254.3
       neighbor 10.1.1.5 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf Tenant_10_WEB_Zone
       rd 10.255.254.3:11
