--- a/inventory/intended/configs/DC-LEAF4.cfg
+++ b/inventory/intended/configs/DC-LEAF4.cfg
@@ -397,6 +397,7 @@ router bgp 65102
       router-id 10.255.254.4
       neighbor 10.1.1.4 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf Tenant_10_WEB_Zone
       rd 10.255.254.4:11
