--- a/inventory/intended/structured_configs/DC-BORDER2-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC-BORDER2-debug-vars.yml
@@ -166,6 +166,41 @@ tenants:
                 ip_address: 10.10.19.2/24
               DC-BORDER2:
                 ip_address: 10.10.19.3/24
+        l3_interfaces:
+        - interfaces:
+          - Ethernet51/1.110
+          encapsulation_dot1q_vlan:
+          - 110
+          ip_addresses:
+          - 192.168.110.0/31
+          nodes:
+          - DC-BORDER1
+          description: L3 Uplink to WAN for Tenant_10_OP_Zone VRF
+          enabled: true
+        - interfaces:
+          - Ethernet51/1.110
+          encapsulation_dot1q_vlan:
+          - 110
+          ip_addresses:
+          - 192.168.110.2/31
+          nodes:
+          - DC-BORDER2
+          description: L3 Uplink to WAN for Tenant_10_OP_Zone VRF
+          enabled: true
+        static_routes:
+        - destination_address_prefix: 0.0.0.0/0
+          gateway: 192.168.110.1
+          name: DEFAULT_TO_WAN
+          interface: Ethernet51/1.110
+          nodes:
+          - DC-BORDER1
+        - destination_address_prefix: 0.0.0.0/0
+          gateway: 192.168.110.3
+          name: DEFAULT_TO_WAN
+          interface: Ethernet51/1.110
+          nodes:
+          - DC-BORDER2
+        redistribute_static: true
       Tenant_10_WEB_Zone:
         vrf_vni: 11
         vtep_diagnostic:
@@ -331,9 +366,9 @@ inventory_hostname_short: DC-BORDER2
 group_names:
 - DC
 - DC_BORDER_LEAVES
+- DC_ENDPOINTS
 - DC_FABRIC
 - DC_LEAVES
-- DC_SERVERS
 - DC_TENANT_NETWORKS
 ansible_facts:
   avd_switch_facts:
@@ -3589,14 +3624,14 @@ groups:
   - DC-LEAF2
   - DC-LEAF3
   - DC-LEAF4
-  DC_SERVERS:
+  DC_ENDPOINTS:
   - DC-BORDER1
   - DC-BORDER2
   - DC-LEAF1
   - DC-LEAF2
   - DC-LEAF3
   - DC-LEAF4
-omit: __omit_place_holder__9e9c0f3a3bd7c83bc21a77897e6f7d6e4234cab0
+omit: __omit_place_holder__829fbe0149d085a140c409cea0e5a28a4c83d7e4
 ansible_version:
   string: 2.14.4
   full: 2.14.4
