--- a/inventory/intended/structured_configs/DC-SPINE1-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC-SPINE1-debug-vars.yml
@@ -3338,14 +3338,14 @@ groups:
   - DC-LEAF2
   - DC-LEAF3
   - DC-LEAF4
-  DC_SERVERS:
+  DC_ENDPOINTS:
   - DC-BORDER1
   - DC-BORDER2
   - DC-LEAF1
   - DC-LEAF2
   - DC-LEAF3
   - DC-LEAF4
-omit: __omit_place_holder__9e9c0f3a3bd7c83bc21a77897e6f7d6e4234cab0
+omit: __omit_place_holder__829fbe0149d085a140c409cea0e5a28a4c83d7e4
 ansible_version:
   string: 2.14.4
   full: 2.14.4
