--- a/inventory/intended/configs/DC-LEAF4.cfg
+++ b/inventory/intended/configs/DC-LEAF4.cfg
@@ -112,6 +112,16 @@ vrf instance Tenant_10_WEB_Zone
 !
 vrf instance Tenant_20_OP_Zone
 !
+interface Port-Channel3
+   description DC-HOST2_PortChanne101
+   no shutdown
+   switchport
+   switchport trunk allowed vlan 10-14,20-22
+   switchport mode trunk
+   mlag 3
+   spanning-tree portfast
+   sflow enable
+!
 interface Port-Channel551
    description MLAG_PEER_DC-LEAF3_Po551
    no shutdown
@@ -120,6 +130,11 @@ interface Port-Channel551
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
+!
+interface Ethernet3
+   description DC-HOST2_Et2
+   no shutdown
+   channel-group 3 mode active
 !
 interface Ethernet49/1
    description P2P_LINK_TO_DC-SPINE1_Ethernet4/1
