--- a/inventory/intended/structured_configs/DC-LEAF1-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC-LEAF1-debug-vars.yml
@@ -1,3 +1,50 @@
+connected_endpoints_keys:
+  servers:
+    type: server
+  firewalls:
+    type: firewall
+  routers:
+    type: router
+port_profiles:
+  VM_Servers:
+    mode: trunk
+    vlans: 10-14,20-22
+    spanning_tree_portfast: edge
+servers:
+  DC-HOST1:
+    rack: Pod1
+    adapters:
+    - endpoint_ports:
+      - Et1
+      - Et2
+      switch_ports:
+      - Ethernet3
+      - Ethernet3
+      switches:
+      - DC-LEAF1
+      - DC-LEAF2
+      profile: VM_Servers
+      port_channel:
+        description: PortChannel101
+        mode: active
+        raw_eos_cli: sflow enable
+  DC-HOST2:
+    rack: Pod2
+    adapters:
+    - endpoint_ports:
+      - Et1
+      - Et2
+      switch_ports:
+      - Ethernet3
+      - Ethernet3
+      switches:
+      - DC-LEAF3
+      - DC-LEAF4
+      profile: VM_Servers
+      port_channel:
+        description: PortChanne101
+        mode: active
+        raw_eos_cli: sflow enable
 fabric_name: DC_FABRIC
 cvp_instance_ip: apiserver.arista.io
 cvp_token_file: /mnt/flash/cv-onboarding-token
@@ -3632,7 +3679,7 @@ groups:
   - DC-LEAF2
   - DC-LEAF3
   - DC-LEAF4
-omit: __omit_place_holder__829fbe0149d085a140c409cea0e5a28a4c83d7e4
+omit: __omit_place_holder__237bcb6615d9ff198882349d8bc7e1aebed9d880
 ansible_version:
   string: 2.14.4
   full: 2.14.4
@@ -3640,7 +3687,7 @@ ansible_version:
   minor: 14
   revision: 4
 ansible_check_mode: false
-ansible_diff_mode: true
+ansible_diff_mode: false
 ansible_forks: 5
 ansible_inventory_sources:
 - /workspaces/avd-demo/inventory/inventory.yml
