--- a/inventory/intended/structured_configs/cvp/cvp_configlets.yml
+++ b/inventory/intended/structured_configs/cvp/cvp_configlets.yml
@@ -341,20 +341,24 @@ CVP_CONFIGLETS:
     !\nvlan 4093\n   name LEAF_PEER_L3\n   trunk group LEAF_PEER_L3\n!\nvlan 4094\n\
     \   name MLAG_PEER\n   trunk group MLAG\n!\nvrf instance management\n!\nvrf instance\
     \ Tenant_10_OP_Zone\n!\nvrf instance Tenant_10_WEB_Zone\n!\nvrf instance Tenant_20_OP_Zone\n\
-    !\ninterface Port-Channel551\n   description MLAG_PEER_DC-LEAF2_Po551\n   no shutdown\n\
-    \   switchport\n   switchport trunk allowed vlan 2-4094\n   switchport mode trunk\n\
-    \   switchport trunk group LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface\
-    \ Ethernet49/1\n   description P2P_LINK_TO_DC-SPINE1_Ethernet1/1\n   no shutdown\n\
-    \   mtu 1500\n   no switchport\n   ip address 10.0.0.1/31\n!\ninterface Ethernet50/1\n\
-    \   description P2P_LINK_TO_DC-SPINE2_Ethernet1/1\n   no shutdown\n   mtu 1500\n\
-    \   no switchport\n   ip address 10.0.0.3/31\n!\ninterface Ethernet55/1\n   description\
-    \ MLAG_PEER_DC-LEAF2_Ethernet55/1\n   no shutdown\n   channel-group 551 mode active\n\
-    !\ninterface Ethernet56/1\n   description MLAG_PEER_DC-LEAF2_Ethernet56/1\n  \
-    \ no shutdown\n   channel-group 551 mode active\n!\ninterface Loopback0\n   description\
-    \ EVPN_Overlay_Peering\n   no shutdown\n   ip address 10.255.254.1/32\n!\ninterface\
-    \ Loopback1\n   description VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address\
-    \ 10.255.255.1/32\n!\ninterface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n\
-    \   no shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.1/32\n!\ninterface\
+    !\ninterface Port-Channel3\n   description DC-HOST1_PortChannel101\n   no shutdown\n\
+    \   switchport\n   switchport trunk allowed vlan 10-14,20-22\n   switchport mode\
+    \ trunk\n   mlag 3\n   spanning-tree portfast\n   sflow enable\n!\ninterface Port-Channel551\n\
+    \   description MLAG_PEER_DC-LEAF2_Po551\n   no shutdown\n   switchport\n   switchport\
+    \ trunk allowed vlan 2-4094\n   switchport mode trunk\n   switchport trunk group\
+    \ LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface Ethernet3\n   description\
+    \ DC-HOST1_Et1\n   no shutdown\n   channel-group 3 mode active\n!\ninterface Ethernet49/1\n\
+    \   description P2P_LINK_TO_DC-SPINE1_Ethernet1/1\n   no shutdown\n   mtu 1500\n\
+    \   no switchport\n   ip address 10.0.0.1/31\n!\ninterface Ethernet50/1\n   description\
+    \ P2P_LINK_TO_DC-SPINE2_Ethernet1/1\n   no shutdown\n   mtu 1500\n   no switchport\n\
+    \   ip address 10.0.0.3/31\n!\ninterface Ethernet55/1\n   description MLAG_PEER_DC-LEAF2_Ethernet55/1\n\
+    \   no shutdown\n   channel-group 551 mode active\n!\ninterface Ethernet56/1\n\
+    \   description MLAG_PEER_DC-LEAF2_Ethernet56/1\n   no shutdown\n   channel-group\
+    \ 551 mode active\n!\ninterface Loopback0\n   description EVPN_Overlay_Peering\n\
+    \   no shutdown\n   ip address 10.255.254.1/32\n!\ninterface Loopback1\n   description\
+    \ VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address 10.255.255.1/32\n!\n\
+    interface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n   no\
+    \ shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.1/32\n!\ninterface\
     \ Loopback11\n   description Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n\
     \   vrf Tenant_10_WEB_Zone\n   ip address 10.255.11.1/32\n!\ninterface Loopback20\n\
     \   description Tenant_20_OP_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n   vrf Tenant_20_OP_Zone\n\
@@ -500,20 +504,24 @@ CVP_CONFIGLETS:
     !\nvlan 4093\n   name LEAF_PEER_L3\n   trunk group LEAF_PEER_L3\n!\nvlan 4094\n\
     \   name MLAG_PEER\n   trunk group MLAG\n!\nvrf instance management\n!\nvrf instance\
     \ Tenant_10_OP_Zone\n!\nvrf instance Tenant_10_WEB_Zone\n!\nvrf instance Tenant_20_OP_Zone\n\
-    !\ninterface Port-Channel551\n   description MLAG_PEER_DC-LEAF1_Po551\n   no shutdown\n\
-    \   switchport\n   switchport trunk allowed vlan 2-4094\n   switchport mode trunk\n\
-    \   switchport trunk group LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface\
-    \ Ethernet49/1\n   description P2P_LINK_TO_DC-SPINE1_Ethernet2/1\n   no shutdown\n\
-    \   mtu 1500\n   no switchport\n   ip address 10.0.0.5/31\n!\ninterface Ethernet50/1\n\
-    \   description P2P_LINK_TO_DC-SPINE2_Ethernet2/1\n   no shutdown\n   mtu 1500\n\
-    \   no switchport\n   ip address 10.0.0.7/31\n!\ninterface Ethernet55/1\n   description\
-    \ MLAG_PEER_DC-LEAF1_Ethernet55/1\n   no shutdown\n   channel-group 551 mode active\n\
-    !\ninterface Ethernet56/1\n   description MLAG_PEER_DC-LEAF1_Ethernet56/1\n  \
-    \ no shutdown\n   channel-group 551 mode active\n!\ninterface Loopback0\n   description\
-    \ EVPN_Overlay_Peering\n   no shutdown\n   ip address 10.255.254.2/32\n!\ninterface\
-    \ Loopback1\n   description VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address\
-    \ 10.255.255.1/32\n!\ninterface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n\
-    \   no shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.2/32\n!\ninterface\
+    !\ninterface Port-Channel3\n   description DC-HOST1_PortChannel101\n   no shutdown\n\
+    \   switchport\n   switchport trunk allowed vlan 10-14,20-22\n   switchport mode\
+    \ trunk\n   mlag 3\n   spanning-tree portfast\n   sflow enable\n!\ninterface Port-Channel551\n\
+    \   description MLAG_PEER_DC-LEAF1_Po551\n   no shutdown\n   switchport\n   switchport\
+    \ trunk allowed vlan 2-4094\n   switchport mode trunk\n   switchport trunk group\
+    \ LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface Ethernet3\n   description\
+    \ DC-HOST1_Et2\n   no shutdown\n   channel-group 3 mode active\n!\ninterface Ethernet49/1\n\
+    \   description P2P_LINK_TO_DC-SPINE1_Ethernet2/1\n   no shutdown\n   mtu 1500\n\
+    \   no switchport\n   ip address 10.0.0.5/31\n!\ninterface Ethernet50/1\n   description\
+    \ P2P_LINK_TO_DC-SPINE2_Ethernet2/1\n   no shutdown\n   mtu 1500\n   no switchport\n\
+    \   ip address 10.0.0.7/31\n!\ninterface Ethernet55/1\n   description MLAG_PEER_DC-LEAF1_Ethernet55/1\n\
+    \   no shutdown\n   channel-group 551 mode active\n!\ninterface Ethernet56/1\n\
+    \   description MLAG_PEER_DC-LEAF1_Ethernet56/1\n   no shutdown\n   channel-group\
+    \ 551 mode active\n!\ninterface Loopback0\n   description EVPN_Overlay_Peering\n\
+    \   no shutdown\n   ip address 10.255.254.2/32\n!\ninterface Loopback1\n   description\
+    \ VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address 10.255.255.1/32\n!\n\
+    interface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n   no\
+    \ shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.2/32\n!\ninterface\
     \ Loopback11\n   description Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n\
     \   vrf Tenant_10_WEB_Zone\n   ip address 10.255.11.2/32\n!\ninterface Loopback20\n\
     \   description Tenant_20_OP_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n   vrf Tenant_20_OP_Zone\n\
@@ -659,20 +667,24 @@ CVP_CONFIGLETS:
     !\nvlan 4093\n   name LEAF_PEER_L3\n   trunk group LEAF_PEER_L3\n!\nvlan 4094\n\
     \   name MLAG_PEER\n   trunk group MLAG\n!\nvrf instance management\n!\nvrf instance\
     \ Tenant_10_OP_Zone\n!\nvrf instance Tenant_10_WEB_Zone\n!\nvrf instance Tenant_20_OP_Zone\n\
-    !\ninterface Port-Channel551\n   description MLAG_PEER_DC-LEAF4_Po551\n   no shutdown\n\
-    \   switchport\n   switchport trunk allowed vlan 2-4094\n   switchport mode trunk\n\
-    \   switchport trunk group LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface\
-    \ Ethernet49/1\n   description P2P_LINK_TO_DC-SPINE1_Ethernet3/1\n   no shutdown\n\
-    \   mtu 1500\n   no switchport\n   ip address 10.0.0.9/31\n!\ninterface Ethernet50/1\n\
-    \   description P2P_LINK_TO_DC-SPINE2_Ethernet3/1\n   no shutdown\n   mtu 1500\n\
-    \   no switchport\n   ip address 10.0.0.11/31\n!\ninterface Ethernet55/1\n   description\
-    \ MLAG_PEER_DC-LEAF4_Ethernet55/1\n   no shutdown\n   channel-group 551 mode active\n\
-    !\ninterface Ethernet56/1\n   description MLAG_PEER_DC-LEAF4_Ethernet56/1\n  \
-    \ no shutdown\n   channel-group 551 mode active\n!\ninterface Loopback0\n   description\
-    \ EVPN_Overlay_Peering\n   no shutdown\n   ip address 10.255.254.3/32\n!\ninterface\
-    \ Loopback1\n   description VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address\
-    \ 10.255.255.3/32\n!\ninterface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n\
-    \   no shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.3/32\n!\ninterface\
+    !\ninterface Port-Channel3\n   description DC-HOST2_PortChanne101\n   no shutdown\n\
+    \   switchport\n   switchport trunk allowed vlan 10-14,20-22\n   switchport mode\
+    \ trunk\n   mlag 3\n   spanning-tree portfast\n   sflow enable\n!\ninterface Port-Channel551\n\
+    \   description MLAG_PEER_DC-LEAF4_Po551\n   no shutdown\n   switchport\n   switchport\
+    \ trunk allowed vlan 2-4094\n   switchport mode trunk\n   switchport trunk group\
+    \ LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface Ethernet3\n   description\
+    \ DC-HOST2_Et1\n   no shutdown\n   channel-group 3 mode active\n!\ninterface Ethernet49/1\n\
+    \   description P2P_LINK_TO_DC-SPINE1_Ethernet3/1\n   no shutdown\n   mtu 1500\n\
+    \   no switchport\n   ip address 10.0.0.9/31\n!\ninterface Ethernet50/1\n   description\
+    \ P2P_LINK_TO_DC-SPINE2_Ethernet3/1\n   no shutdown\n   mtu 1500\n   no switchport\n\
+    \   ip address 10.0.0.11/31\n!\ninterface Ethernet55/1\n   description MLAG_PEER_DC-LEAF4_Ethernet55/1\n\
+    \   no shutdown\n   channel-group 551 mode active\n!\ninterface Ethernet56/1\n\
+    \   description MLAG_PEER_DC-LEAF4_Ethernet56/1\n   no shutdown\n   channel-group\
+    \ 551 mode active\n!\ninterface Loopback0\n   description EVPN_Overlay_Peering\n\
+    \   no shutdown\n   ip address 10.255.254.3/32\n!\ninterface Loopback1\n   description\
+    \ VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address 10.255.255.3/32\n!\n\
+    interface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n   no\
+    \ shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.3/32\n!\ninterface\
     \ Loopback11\n   description Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n\
     \   vrf Tenant_10_WEB_Zone\n   ip address 10.255.11.3/32\n!\ninterface Loopback20\n\
     \   description Tenant_20_OP_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n   vrf Tenant_20_OP_Zone\n\
@@ -818,20 +830,24 @@ CVP_CONFIGLETS:
     !\nvlan 4093\n   name LEAF_PEER_L3\n   trunk group LEAF_PEER_L3\n!\nvlan 4094\n\
     \   name MLAG_PEER\n   trunk group MLAG\n!\nvrf instance management\n!\nvrf instance\
     \ Tenant_10_OP_Zone\n!\nvrf instance Tenant_10_WEB_Zone\n!\nvrf instance Tenant_20_OP_Zone\n\
-    !\ninterface Port-Channel551\n   description MLAG_PEER_DC-LEAF3_Po551\n   no shutdown\n\
-    \   switchport\n   switchport trunk allowed vlan 2-4094\n   switchport mode trunk\n\
-    \   switchport trunk group LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface\
-    \ Ethernet49/1\n   description P2P_LINK_TO_DC-SPINE1_Ethernet4/1\n   no shutdown\n\
-    \   mtu 1500\n   no switchport\n   ip address 10.0.0.13/31\n!\ninterface Ethernet50/1\n\
-    \   description P2P_LINK_TO_DC-SPINE2_Ethernet4/1\n   no shutdown\n   mtu 1500\n\
-    \   no switchport\n   ip address 10.0.0.15/31\n!\ninterface Ethernet55/1\n   description\
-    \ MLAG_PEER_DC-LEAF3_Ethernet55/1\n   no shutdown\n   channel-group 551 mode active\n\
-    !\ninterface Ethernet56/1\n   description MLAG_PEER_DC-LEAF3_Ethernet56/1\n  \
-    \ no shutdown\n   channel-group 551 mode active\n!\ninterface Loopback0\n   description\
-    \ EVPN_Overlay_Peering\n   no shutdown\n   ip address 10.255.254.4/32\n!\ninterface\
-    \ Loopback1\n   description VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address\
-    \ 10.255.255.3/32\n!\ninterface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n\
-    \   no shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.4/32\n!\ninterface\
+    !\ninterface Port-Channel3\n   description DC-HOST2_PortChanne101\n   no shutdown\n\
+    \   switchport\n   switchport trunk allowed vlan 10-14,20-22\n   switchport mode\
+    \ trunk\n   mlag 3\n   spanning-tree portfast\n   sflow enable\n!\ninterface Port-Channel551\n\
+    \   description MLAG_PEER_DC-LEAF3_Po551\n   no shutdown\n   switchport\n   switchport\
+    \ trunk allowed vlan 2-4094\n   switchport mode trunk\n   switchport trunk group\
+    \ LEAF_PEER_L3\n   switchport trunk group MLAG\n!\ninterface Ethernet3\n   description\
+    \ DC-HOST2_Et2\n   no shutdown\n   channel-group 3 mode active\n!\ninterface Ethernet49/1\n\
+    \   description P2P_LINK_TO_DC-SPINE1_Ethernet4/1\n   no shutdown\n   mtu 1500\n\
+    \   no switchport\n   ip address 10.0.0.13/31\n!\ninterface Ethernet50/1\n   description\
+    \ P2P_LINK_TO_DC-SPINE2_Ethernet4/1\n   no shutdown\n   mtu 1500\n   no switchport\n\
+    \   ip address 10.0.0.15/31\n!\ninterface Ethernet55/1\n   description MLAG_PEER_DC-LEAF3_Ethernet55/1\n\
+    \   no shutdown\n   channel-group 551 mode active\n!\ninterface Ethernet56/1\n\
+    \   description MLAG_PEER_DC-LEAF3_Ethernet56/1\n   no shutdown\n   channel-group\
+    \ 551 mode active\n!\ninterface Loopback0\n   description EVPN_Overlay_Peering\n\
+    \   no shutdown\n   ip address 10.255.254.4/32\n!\ninterface Loopback1\n   description\
+    \ VTEP_VXLAN_Tunnel_Source\n   no shutdown\n   ip address 10.255.255.3/32\n!\n\
+    interface Loopback10\n   description Tenant_10_OP_Zone_VTEP_DIAGNOSTICS\n   no\
+    \ shutdown\n   vrf Tenant_10_OP_Zone\n   ip address 10.255.10.4/32\n!\ninterface\
     \ Loopback11\n   description Tenant_10_WEB_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n\
     \   vrf Tenant_10_WEB_Zone\n   ip address 10.255.11.4/32\n!\ninterface Loopback20\n\
     \   description Tenant_20_OP_Zone_VTEP_DIAGNOSTICS\n   no shutdown\n   vrf Tenant_20_OP_Zone\n\
