--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -5,35 +5,34 @@ all:
     CVP:
       hosts:
         cvp:
-    DC:
+    DC3:
       children:
-        DC_FABRIC:
+        DC3_FABRIC:
           children:
-            DC_SPINES:
+            DC3_SPINES:
               hosts:
-                DC-SPINE1:
-                DC-SPINE2:
-            DC_LEAVES:
+                DC3-SPINE1:
+                DC3-SPINE2:
+            DC3_LEAVES:
               children:
-                DC_COMPUTE_LEAVES:
-                  children:
-                    DC_COMPUTE_POD1:
-                      hosts:
-                        DC-LEAF1:
-                        DC-LEAF2:
-                    DC_COMPUTE_POD2:
-                      hosts:
-                        DC-LEAF3:
-                        DC-LEAF4:
-                DC_BORDER_LEAVES:
+                DC3_LEAF_DOMAIN_1:
                   hosts:
-                    DC-BORDER1:
-                    DC-BORDER2:
-        DC_TENANT_NETWORKS:
+                    DC3-LEAF1:
+                    DC3-LEAF2:
+                DC3_LEAF_DOMAIN_2:
+                  hosts:
+                    DC3-LEAF3:
+                    DC3-LEAF4:
+                DC3_BORDER_LEAVES:
+                  hosts:
+                    DC3-BORDER1:
+                    DC3-BORDER2:
+        DC3_TENANT_NETWORKS:
           children:
-            DC_COMPUTE_LEAVES:
-            DC_BORDER_LEAVES:
-        DC_ENDPOINTS:
+            DC3_LEAF_DOMAIN_1:
+            DC3_LEAF_DOMAIN_2:
+            DC3_BORDER_LEAVES:
+        DC3_ENDPOINTS:
           children:
-            DC_COMPUTE_LEAVES:
-            DC_BORDER_LEAVES:
+            DC3_LEAF_DOMAIN_1:
+            DC3_LEAF_DOMAIN_2:
