--- a/playbooks/dc_fabric_deploy.yml
+++ b/playbooks/dc_fabric_deploy.yml
@@ -35,7 +35,7 @@
       import_role:
         name: arista.avd.eos_config_deploy_cvp
       vars:
-        container_root: 'DC3'
+        container_root: 'DC3_FABRIC'
         configlets_prefix: 'AVD-L3LSV'
         state: present
         cv_collection: v3
