--- a/inventory/intended/structured_configs/DC3-BORDER1-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC3-BORDER1-debug-vars.yml
@@ -156,6 +156,13 @@ tenants:
             - border
             enabled: true
             ip_address_virtual: 10.10.11.1/24
+          90:
+            name: CORP_DC3
+            tags:
+            - compute
+            - border
+            enabled: true
+            ip_address_virtual: 10.90.91.1/24
 type: l3leaf
 l3leaf:
   defaults:
@@ -594,7 +601,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.1
         igmp_snooping_enabled: true
@@ -795,7 +802,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.2
         igmp_snooping_enabled: true
@@ -996,7 +1003,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.3
         igmp_snooping_enabled: true
@@ -1197,7 +1204,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.4
         igmp_snooping_enabled: true
@@ -1398,7 +1405,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.127
         igmp_snooping_enabled: true
@@ -1599,7 +1606,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.128
         igmp_snooping_enabled: true
@@ -2087,7 +2094,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.1
       igmp_snooping_enabled: true
@@ -2288,7 +2295,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.2
       igmp_snooping_enabled: true
@@ -2489,7 +2496,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.3
       igmp_snooping_enabled: true
@@ -2690,7 +2697,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.4
       igmp_snooping_enabled: true
@@ -2891,7 +2898,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.127
       igmp_snooping_enabled: true
@@ -3092,7 +3099,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.128
       igmp_snooping_enabled: true
@@ -3323,7 +3330,7 @@ switch:
   enable_trunk_groups: false
   local_endpoint_trunk_groups: []
   endpoint_trunk_groups: []
-  vlans: 10,40
+  vlans: 10,40,90
   spanning_tree_mode: mstp
   overlay_rd_type_admin_subfield: 10.3.103.127
   igmp_snooping_enabled: true
@@ -3450,26 +3457,26 @@ ansible_config_file: /workspaces/avd-demo/ansible.cfg
 groups:
   all:
   - cvp
+  - DC3-SPINE1
+  - DC3-SPINE2
   - DC3-LEAF1
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
   - DC3-BORDER1
   - DC3-BORDER2
-  - DC3-SPINE1
-  - DC3-SPINE2
   ungrouped: []
   CVP:
   - cvp
   DC3:
+  - DC3-SPINE1
+  - DC3-SPINE2
   - DC3-LEAF1
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
   - DC3-BORDER1
   - DC3-BORDER2
-  - DC3-SPINE1
-  - DC3-SPINE2
   DC3_FABRIC:
   - DC3-SPINE1
   - DC3-SPINE2
@@ -3510,7 +3517,7 @@ groups:
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
-omit: __omit_place_holder__c09ca437127163798743cc784d2a876ad9faa036
+omit: __omit_place_holder__2c92b5e9437d1609ed4595eb7953393fce2c41e3
 ansible_version:
   string: 2.14.4
   full: 2.14.4
