--- a/inventory/intended/structured_configs/DC3-LEAF4-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC3-LEAF4-debug-vars.yml
@@ -207,6 +207,13 @@ tenants:
             - border
             enabled: true
             ip_address_virtual: 10.10.11.1/24
+          90:
+            name: CORP_DC3
+            tags:
+            - compute
+            - border
+            enabled: true
+            ip_address_virtual: 10.90.91.1/24
 type: l3leaf
 l3leaf:
   defaults:
@@ -646,7 +653,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.1
         igmp_snooping_enabled: true
@@ -847,7 +854,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.2
         igmp_snooping_enabled: true
@@ -1048,7 +1055,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.3
         igmp_snooping_enabled: true
@@ -1249,7 +1256,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.4
         igmp_snooping_enabled: true
@@ -1450,7 +1457,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.127
         igmp_snooping_enabled: true
@@ -1651,7 +1658,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40
+        vlans: 10,40,90
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.128
         igmp_snooping_enabled: true
@@ -2139,7 +2146,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.1
       igmp_snooping_enabled: true
@@ -2340,7 +2347,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.2
       igmp_snooping_enabled: true
@@ -2541,7 +2548,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.3
       igmp_snooping_enabled: true
@@ -2742,7 +2749,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.4
       igmp_snooping_enabled: true
@@ -2943,7 +2950,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.127
       igmp_snooping_enabled: true
@@ -3144,7 +3151,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40
+      vlans: 10,40,90
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.128
       igmp_snooping_enabled: true
@@ -3375,7 +3382,7 @@ switch:
   enable_trunk_groups: false
   local_endpoint_trunk_groups: []
   endpoint_trunk_groups: []
-  vlans: 10,40
+  vlans: 10,40,90
   spanning_tree_mode: mstp
   overlay_rd_type_admin_subfield: 10.3.103.4
   igmp_snooping_enabled: true
@@ -3502,26 +3509,26 @@ ansible_config_file: /workspaces/avd-demo/ansible.cfg
 groups:
   all:
   - cvp
+  - DC3-SPINE1
+  - DC3-SPINE2
   - DC3-LEAF1
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
   - DC3-BORDER1
   - DC3-BORDER2
-  - DC3-SPINE1
-  - DC3-SPINE2
   ungrouped: []
   CVP:
   - cvp
   DC3:
+  - DC3-SPINE1
+  - DC3-SPINE2
   - DC3-LEAF1
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
   - DC3-BORDER1
   - DC3-BORDER2
-  - DC3-SPINE1
-  - DC3-SPINE2
   DC3_FABRIC:
   - DC3-SPINE1
   - DC3-SPINE2
@@ -3562,7 +3569,7 @@ groups:
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
-omit: __omit_place_holder__c09ca437127163798743cc784d2a876ad9faa036
+omit: __omit_place_holder__2c92b5e9437d1609ed4595eb7953393fce2c41e3
 ansible_version:
   string: 2.14.4
   full: 2.14.4
