--- a/inventory/intended/configs/DC3-BORDER1.cfg
+++ b/inventory/intended/configs/DC3-BORDER1.cfg
@@ -69,6 +69,9 @@ vlan 10
 vlan 40
    name CORP_DC3
 !
+vlan 90
+   name CORP_DC3
+!
 vlan 3009
    name MLAG_iBGP_CORP
    trunk group LEAF_PEER_L3
@@ -152,6 +155,12 @@ interface Vlan40
    vrf CORP
    ip address virtual 10.10.11.1/24
 !
+interface Vlan90
+   description CORP_DC3
+   no shutdown
+   vrf CORP
+   ip address virtual 10.90.91.1/24
+!
 interface Vlan3009
    description MLAG_PEER_L3_iBGP: vrf CORP
    no shutdown
@@ -179,6 +188,7 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 40 vni 10040
+   vxlan vlan 90 vni 10090
    vxlan vrf CORP vni 10
 !
 mac address-table aging-time 1300
@@ -267,6 +277,11 @@ router bgp 65316
    vlan 40
       rd 10.3.103.127:10040
       route-target both 10040:10040
+      redistribute learned
+   !
+   vlan 90
+      rd 10.3.103.127:10090
+      route-target both 10090:10090
       redistribute learned
    !
    address-family evpn
