--- a/inventory/intended/structured_configs/DC3-BORDER1.yml
+++ b/inventory/intended/structured_configs/DC3-BORDER1.yml
@@ -95,6 +95,14 @@ router_bgp:
         - 10040:10040
       redistribute_routes:
       - learned
+    90:
+      tenant: CORP
+      rd: 10.3.103.127:10090
+      route_targets:
+        both:
+        - 10090:10090
+      redistribute_routes:
+      - learned
 static_routes:
 - vrf: management
   destination_address_prefix: 0.0.0.0/0
@@ -177,6 +185,9 @@ vlans:
   40:
     tenant: CORP
     name: CORP_DC3
+  90:
+    tenant: CORP
+    name: CORP_DC3
   3009:
     tenant: CORP
     name: MLAG_iBGP_CORP
@@ -211,6 +222,15 @@ vlan_interfaces:
     description: CORP_DC3
     shutdown: false
     ip_address_virtual: 10.10.11.1/24
+    vrf: CORP
+  Vlan90:
+    tenant: CORP
+    tags:
+    - compute
+    - border
+    description: CORP_DC3
+    shutdown: false
+    ip_address_virtual: 10.90.91.1/24
     vrf: CORP
   Vlan3009:
     tenant: CORP
@@ -331,6 +351,8 @@ vxlan_interface:
           vni: 10010
         40:
           vni: 10040
+        90:
+          vni: 10090
       vrfs:
         CORP:
           vni: 10
